@@ -466,6 +466,7 @@
 														<option value="RUB">RUB</option>
 														<option value="CZK">CZK</option>
 														<option value="BYN">BYN</option>
+														<option value="UAH">UAH</option>
 													</select>
 												</td>
 												<td width="40%"></td>
