@@ -421,6 +421,7 @@
 												<option value="RUB">RUB</option>
 												<option value="CZK">CZK</option>
 												<option value="BYN">BYN</option>
+												<option value="UAH">UAH</option>
 											</select>
 										</p>
 										<!--/*/
@@ -650,6 +651,7 @@
 															<option value="RUB" selected="selected">RUB</option>
 															<option value="CZK">CZK</option>
 															<option value="BYN">BYN</option>
+															<option value="UAH">UAH</option>
 														</select>
 													</div>
 												</div>
@@ -678,6 +680,7 @@
 															<option value="RUB">RUB</option>
 															<option value="CZK">CZK</option>
 															<option value="BYN">BYN</option>
+															<option value="UAH">UAH</option>
 														</select>
 													</div>
 												</div>
